--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ httptools==0.6.1
 idna==3.6
 pydantic==2.6.1
 pydantic-core==2.16.2
+pydantic-settings==2.2.0
 python-dotenv==1.0.1
 pyyaml==6.0.1
 sniffio==1.3.0
