--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-table": "^8.13.2",
+    "apexcharts": "^3.46.0",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2"
