--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,21 @@
 annotated-types==0.6.0
 anyio==4.3.0
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.5
 exceptiongroup==1.2.0
 fastapi==0.109.2
 h11==0.14.0
 httptools==0.6.1
 idna==3.6
+pycparser==2.21
 pydantic==2.6.1
 pydantic-core==2.16.2
 pydantic-settings==2.2.0
+pyjwt==2.8.0
 python-dotenv==1.0.1
 pyyaml==6.0.1
+ruff==0.2.2
 sniffio==1.3.0
 starlette==0.36.3
 typing-extensions==4.9.0
